force-app/main/default/objects/APIConfiguration__mdt/APIConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>APIConfiguration</label>
    <pluralLabel>APIConfiguration</pluralLabel>
</CustomObject>