force-app/main/default/objects/APIConfiguration__mdt/fields/ApiEndPoint__c.field-meta.xml
<CustomField>
    <fullName>ApiEndPoint__c</fullName>
    <label>ApiEndPoint</label>
    <type>Url</type>
</CustomField>