force-app/main/default/objects/APIConfiguration__mdt/fields/Consumer_Key__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Key__c</fullName>
    <label>Consumer Key</label>
    <type>TextArea</type>
</CustomField>