force-app/main/default/objects/APIConfiguration__mdt/fields/HeaderParameters__c.field-meta.xml
<CustomField>
    <fullName>HeaderParameters__c</fullName>
    <label>HeaderParameters</label>
    <length>20</length>
    <type>Text</type>
</CustomField>