force-app/main/default/objects/APIConfiguration__mdt/fields/RequestMethod__c.field-meta.xml
<CustomField>
    <fullName>RequestMethod__c</fullName>
    <label>RequestMethod</label>
    <length>20</length>
    <type>Text</type>
</CustomField>