force-app/main/default/objects/APIConfiguration__mdt/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>UserName</label>
    <type>TextArea</type>
</CustomField>